version 0.3.2 (XX/XX/2015)
* Energy Histogram Computation:
    * Gromacs-type force switching is implemented

version 0.3.1 (06/08/2015)
* Bug fixes:
    Fixed GROMAS gen_structure cannot specify solutes in interactive way

version 0.3.0 (06/01/2015)
* Bug fixes:
    GROMACS topology file parsing is now case sensitive
    (it was case insensitive to match pre-4.0 behaviour, which is now outdated)

version 0.3.rc1 (05/07/2015)
* Energy Histogram Computation:
    * The extension of energy representation with intermediate states is implemented (experimental). 
* Solvation Free Energy:
    * The numbers of soln/engsln.XX and refs/engref.XX files are counted
    internally within the slvfe program.
* Error reporting:
    * NBFIX keyword in PSF files, which was not correctly handled, is now reported as an error.
    * When input atoms are not contiguous, gen_structure generates error instead of warning. Users
    can fall back to the old behaviour by reverting changes manually.
* Bug fixes:
    * mpi_info conflicting with MPI-3.0 is now removed
    * Blacklisted ifort 12.1.x which emits broken codes.
    * Misc. configure bug for compiling option

version 0.3.beta1 (02/08/2014)
* Energy Histogram Computation:
    * Non-orthogonal periodic box is now correctly handled.
    * Treatment of asymmetric slab geometry is made possible.
* File I/O:
    * Added ERMOD_FORCE_PLUGIN_TYPE environment to coerce file format detection.
* Bug fixes:
    * A workaround was implemented in configure agaist a bug in MKL ver 10.3.
    * Workaround cpp's error when using AMBER force field in GROMACS. This is not perfect (yet).
    * Some histogram parameters are no longer adjustable (ticket #7)

version 0.3.alpha8 (04/10/2013)
* Solvation Free Energy:
    * Added dispersion correction on Lennard-Jones interaction in the modified
    slvfe.F90 program prepared in the extensions directory. THIS WILL NOT
    BE ENABLED BY DEFAULT! See extensions/README_LJLRC for details.
