@@ -1,6 +1,8 @@
 version 0.3.2 (XX/XX/2015)
 * Energy Histogram Computation:
     * Gromacs-type force switching is implemented
+    * Micelle, lipid membrane, and protein can consist of more than a single
+    species
 
 version 0.3.1 (06/08/2015)
 * Bug fixes:
